<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_button_test</name>
  <version>0.0.0</version>
  <description>Test package for controlling Kobuki robot using button inputs</description>
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>


  <!-- Test dependencies (optional for linting, etc.) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
