<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_teleop_switch</name>
  <version>0.0.0</version>
  <description>Package to switch between joystick teleoperation and rotation mode</description>
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>  <!-- rclcpp_components necessário -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_ros_interfaces</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>kobuki_rotate_test</build_depend>  <!-- Dependência do pacote correto -->
  <build_depend>sensor_msgs</build_depend>  <!-- Adiciona o sensor_msgs nas dependências de build -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>  <!-- rclcpp_components necessário -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kobuki_ros_interfaces</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>kobuki_rotate_test</exec_depend>  <!-- Dependência do pacote correto -->
  <exec_depend>sensor_msgs</exec_depend>  <!-- Adiciona o sensor_msgs nas dependências de execução -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
